feat: add benchmarking pipeline v4
Group benchmark files by benchmark suite, rather than by file type. Add proper .prm parameter handling. Fix benchmark extraction regex that enforced a space instead of whitespace. Also iterate through graph markers, not just colors. Remove benchmarking env python variable with os env variable.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 benchmarks/**
-plots_comparison/**
-plots_single/**
-runs/**
+comparisons/**
+old_dirs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
