--- a/job_fritz.template
+++ b/job_fritz.template
@@ -12,10 +12,6 @@ fi
 
 unset SLURM_EXPORT_ENV
 
-echo "compiling..."
+echo "running benchmark..."
 
-make -j __NTASKS_PER_NODE__
-
-echo "finished build, running benchmark..."
-
-srun __DEPENDANT_SRUN_FLAGS__  --output="$3" "$1" "$2"
+srun __DEPENDANT_SRUN_FLAGS__ --output="$3" "$1" "$2"
